--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vuepress/theme-default": "^2.0.0-rc.41",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
+    "typescript": "^5.5.4",
     "vuepress": "^2.0.0-rc.14"
   }
 }
