--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git+ssh://git@github.com/neverbiasu/faych-blog.git"
   },
   "keywords": [
-    "vue"
+    "vue",
+    "vuepress-theme"
   ],
   "author": "neverbiasu",
   "license": "MIT",
@@ -20,12 +21,25 @@
     "url": "https://github.com/neverbiasu/faych-blog/issues"
   },
   "homepage": "https://github.com/neverbiasu/faych-blog#readme",
+  "type": "module",
   "devDependencies": {
+    "@types/node": "^22.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "@vuepress/bundler-webpack": "^2.0.0-rc.14",
+    "@vuepress/plugin-catalog": "^2.0.0-rc.41",
     "@vuepress/theme-default": "^2.0.0-rc.41",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "sass": "^1.77.8",
-    "sass-loader": "^16.0.1",
+    "sass-loader": "16.0.0",
     "typescript": "^5.5.4",
-    "vuepress": "^2.0.0-rc.14"
+    "typescript-eslint": "^8.2.0",
+    "vuepress": "^2.0.0-rc.14",
+    "vuepress-plugin-remove-html-extension": "^1.12.0",
+    "vuepress-plugin-social-share": "^2.0.0-beta.21"
   }
 }
